# slicer

./: .gitignore  LICENSE  Makefile  README.md
slicer/: .gitignore  CMakeLists.txt  Makefile  conanfile.py  main.cpp
